V3168 Sirplaste Update Sinottici

--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="19*"/>
             <RowDefinition Height="37*"/>
         </Grid.RowDefinitions>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="321,222,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="255" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="321,222,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="255" PipeHeight="Medium" StatusComponent="024-01-MA1" Height="30">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -31,7 +31,7 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -56,7 +56,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1103,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="287-01-MA1" Height="30" Grid.Row="1" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1103,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA1" Height="30" Grid.Row="1" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -76,8 +76,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Separation:VSP_SeparationTank_wHopper HorizontalAlignment="Left" Margin="812,11,0,271" Width="334" Grid.Row="1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="567,20,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="83" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="567,20,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="83" PipeHeight="Medium" StatusComponent="024-01-MA1" Height="30" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -87,7 +86,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="526,264,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="92" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30" Grid.RowSpan="2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="526,264,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="92" PipeHeight="Medium" StatusComponent="024-01-MA1" Height="30" Grid.RowSpan="2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,12 +111,12 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="406,84,0,0" VerticalAlignment="Top" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="287-01-MA1" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="406,84,0,0" VerticalAlignment="Top" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="291-01-MA1" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -132,7 +131,7 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -142,7 +141,7 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -152,7 +151,7 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -162,77 +161,13 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="471,68,0,0" Grid.Row="1" VerticalAlignment="Top" Height="38" Width="50"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="574,234,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="115"/>
-        <Machines:Waste HorizontalAlignment="Left" Margin="638,352,0,0" Grid.Row="1" VerticalAlignment="Top" Height="60" Width="62"/>
-        <Machines:Waste HorizontalAlignment="Left" Margin="921,443,0,0" Grid.Row="1" VerticalAlignment="Top" Height="60" Width="62"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1146,107,0,0" VerticalAlignment="Top" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="982,313,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-22-CV1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="451,106,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="210-21-CV1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="982,382,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-23-CV1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="820,225,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="698,222,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="210-22-CV1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="698,291,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="210-23-CV1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1126,168,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-24-CV1" Width="90" Grid.Row="1"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="327,51,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="210-21-CV1" 
-            JumpToLabel="291-01-MA1" Grid.Row="1"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="574,304,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="115"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="854,327,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="116"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="854,396,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="116"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1245,20,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="220-24-CV1" 
-            JumpToLabel="230-01-MA1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="907,107,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-41-LT1" Grid.Row="1"/>
-        <Stirrer:STR_PrewashReactor_wScrew HorizontalAlignment="Left" Margin="561,260,0,361" Width="216" Grid.RowSpan="2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="621,217,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="210-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="140,197,0,0" VerticalAlignment="Top" Width="66" StatusComponent="020-22-CV1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="38" StatusComponent="020-22-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Margin="182,212,0,0">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="140,197,0,0" VerticalAlignment="Top" Width="66" StatusComponent="020-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="38" StatusComponent="020-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Margin="182,212,0,0">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -282,6 +217,25 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Separation:VSP_SeparationTank_wHopper HorizontalAlignment="Left" Margin="812,11,0,271" Width="334" Grid.Row="1"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="471,68,0,0" Grid.Row="1" VerticalAlignment="Top" Height="38" Width="50"/>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="574,234,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="115"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="638,352,0,0" Grid.Row="1" VerticalAlignment="Top" Height="60" Width="62"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="921,443,0,0" Grid.Row="1" VerticalAlignment="Top" Height="60" Width="62"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1146,107,0,0" VerticalAlignment="Top" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="574,304,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="115"/>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="854,327,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="116"/>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" Margin="854,396,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" Width="116"/>
+        <Stirrer:STR_PrewashReactor_wScrew HorizontalAlignment="Left" Margin="561,260,0,361" Width="216" Grid.RowSpan="2"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="186,227,0,0" VerticalAlignment="Top" Height="20" Width="170"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="265,122,0,0" VerticalAlignment="Top" Height="3" Width="155" RenderTransformOrigin="0.5,0.5">
             <Machines:NT_ConveyorBelt.RenderTransform>
@@ -295,6 +249,10 @@
         </Machines:NT_ConveyorBelt>
         <Machines:Waste HorizontalAlignment="Left" Margin="373,148,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="621,217,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="210-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="298,59,0,0" 
             VerticalAlignment="Top" 
             ComponentName="025-01-MA1"/>
@@ -307,5 +265,50 @@
             VerticalAlignment="Top" 
             JumpFromLabel="024-01-MA1" 
             JumpToLabel="020-01-MA1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            Margin="1245,20,0,0" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="220-24-CV1" 
+            JumpToLabel="230-01-MA1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="907,107,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-41-LT1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="982,313,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-22-CV1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="451,106,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="210-21-CV1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="982,382,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-23-CV1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="820,225,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="698,222,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="210-22-CV1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="698,291,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="210-23-CV1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1126,168,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-24-CV1" Width="90" Grid.Row="1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            Margin="327,51,0,0" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="210-21-CV1" 
+            JumpToLabel="291-01-MA1" Grid.Row="1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="87,58,0,176" TextWrapping="Wrap" TextAlignment="Center" 
+            FontSize="36" Foreground="Black" FontWeight="Bold"><Run Language="it-it" Text="Q11"/></TextBlock>
+        <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="53,39,942,520" Grid.RowSpan="2"/>
     </Grid>
 </UserControl>
