--- a/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="19*"/>
             <RowDefinition Height="37*"/>
         </Grid.RowDefinitions>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="328,299,0,0" VerticalAlignment="Top" Color="Water" Width="72" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="328,299,0,0" VerticalAlignment="Top" Color="Water" Width="72" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-01-MA1" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -25,7 +25,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1043,265,0,0" VerticalAlignment="Top" Width="137" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Height="20" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1043,265,0,0" VerticalAlignment="Top" Width="137" RenderTransformOrigin="0.5,0.5" StatusComponent="237-01-MA1" PipeHeight="Medium" Height="20" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -65,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="864,253,0,0" VerticalAlignment="Top" Width="137" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Height="20" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="864,253,0,0" VerticalAlignment="Top" Width="137" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Height="20" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -75,7 +75,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="421,69,0,0" VerticalAlignment="Top" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="230-03-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="421,69,0,0" VerticalAlignment="Top" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -85,7 +85,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="441,121,0,0" VerticalAlignment="Top" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="230-03-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="441,121,0,0" VerticalAlignment="Top" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -105,7 +105,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="474,251,0,0" VerticalAlignment="Top" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-21-CV1" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="474,251,0,0" VerticalAlignment="Top" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-01-MA1" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -115,7 +115,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="350,271,0,0" VerticalAlignment="Top" Color="Water" Width="163" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Grid.Row="1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="350,271,0,0" VerticalAlignment="Top" Color="Water" Width="163" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-01-MA1" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -165,7 +165,17 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="186,194,0,0" VerticalAlignment="Top" Color="Water" Width="95" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="287-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="186,194,0,0" VerticalAlignment="Top" Color="Water" Width="95" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="291-01-MA1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="183,329,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="236-01-MA1" Grid.Row="1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -207,6 +217,46 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:CV_Valve HorizontalAlignment="Left" Margin="263,184,0,0" VerticalAlignment="Top" Height="38" Width="50"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="620,381,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="751,248,0,0" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
+            <Machines:DCE_DryingCentrifuge.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:DCE_DryingCentrifuge.RenderTransform>
+        </Machines:DCE_DryingCentrifuge>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="995,228,0,0" Grid.Row="1" VerticalAlignment="Top" Height="54" Width="74"/>
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="278,298,0,0" Grid.Row="1" VerticalAlignment="Top" Height="77" Width="101"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="304,310,0,0" Grid.Row="1" VerticalAlignment="Top" Height="54" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="180"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="283,380,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="236-01-MA1" Grid.Row="1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            Margin="136,303,0,0" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="236-01-MA1" 
+            JumpToLabel="225-01-CV1" Grid.Row="1" Direction="Left"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="521,366,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="233-01-MA1" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="755,191,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="234-01-MA1" Grid.Row="1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="352,44,0,0" 
             VerticalAlignment="Top" 
@@ -250,55 +300,5 @@
             VerticalAlignment="Top" 
             JumpFromLabel="230-21-CV1" 
             JumpToLabel="291-01-MA1"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="620,381,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="751,248,0,0" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="521,366,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="233-01-MA1" Grid.Row="1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="755,191,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="234-01-MA1" Grid.Row="1"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="995,228,0,0" Grid.Row="1" VerticalAlignment="Top" Height="54" Width="74"/>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="278,298,0,0" Grid.Row="1" VerticalAlignment="Top" Height="77" Width="101"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="283,380,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="236-01-MA1" Grid.Row="1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="183,329,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Grid.Row="1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="304,310,0,0" Grid.Row="1" VerticalAlignment="Top" Height="54" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="136,303,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="236-01-MA1" 
-            JumpToLabel="225-01-CV1" Grid.Row="1" Direction="Left"/>
     </Grid>
 </UserControl>
