--- a/Prevu.Synoptics.V3168_Sirplaste/P371.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P371.xaml
@@ -6,12 +6,12 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Silos="clr-namespace:Prevu.Drawings.Machines.Silos;assembly=Prevu.Drawings" 
+             xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P371" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="329,594,0,0" VerticalAlignment="Top" Width="206" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="12"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="369,512,0,0" VerticalAlignment="Top" Width="166" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="345,315,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" >
+        <Labels:Pipe HorizontalAlignment="Left" Margin="880,303,0,0" VerticalAlignment="Top" Width="72" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="970,274,0,0" VerticalAlignment="Top" Width="76" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -21,7 +21,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="342,485,0,0" VerticalAlignment="Top" Width="58" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1097,219,0,0" VerticalAlignment="Top" Width="53" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="257,594,0,0" VerticalAlignment="Top" Width="206" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="12"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="297,512,0,0" VerticalAlignment="Top" Width="166" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="273,315,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -31,7 +34,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="346,322,0,0" VerticalAlignment="Top" Width="50" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="358-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="270,485,0,0" VerticalAlignment="Top" Width="58" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -41,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="337,292,0,0" VerticalAlignment="Top" Width="112" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="357-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="273,323,0,0" VerticalAlignment="Top" Width="52" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="358-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,9 +54,40 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="323,235,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="357-21-CV1" Height="12"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="312,297,0,0" VerticalAlignment="Top" Width="61" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="358-21-CV1" Height="10"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="366,185,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="265,292,0,0" VerticalAlignment="Top" Width="112" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="357-21-CV1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="251,235,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="357-21-CV1" Height="12"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="240,297,0,0" VerticalAlignment="Top" Width="61" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="358-21-CV1" Height="10"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1006,237,0,0" VerticalAlignment="Top" Width="62" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="977,498,0,0" VerticalAlignment="Top" Width="60" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-03-EC1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="981,578,0,0" VerticalAlignment="Top" Width="52" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-02-MA1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90.1"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="294,185,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -63,8 +97,8 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:Chemical_dosing HorizontalAlignment="Left" Margin="300,345,0,0" VerticalAlignment="Top" Height="130" Width="144"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="305,207,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:Chemical_dosing HorizontalAlignment="Left" Margin="228,345,0,0" VerticalAlignment="Top" Height="130" Width="144"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="233,207,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -74,7 +108,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="305,267,0,0" VerticalAlignment="Top" Height="72" Width="52" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="233,267,0,0" VerticalAlignment="Top" Height="72" Width="52" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -84,7 +118,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="305,565,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="233,565,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -94,34 +128,81 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
+        <TextBlock HorizontalAlignment="Left" Margin="124,647,0,142" TextWrapping="Wrap" TextAlignment="Center" 
+		FontSize="36" Foreground="Black" FontWeight="Bold"><Run Language="it-it" Text="Chemicals"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="780,647,0,142" TextWrapping="Wrap" TextAlignment="Center" 
+            FontSize="36" Foreground="Black" FontWeight="Bold" Text="Air Filtration Unit"/>
+        <TextBlock Width="94" VerticalAlignment="Top" TextWrapping="Wrap" TextAlignment="Center" Margin="564,39,0,0" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="Q5"/><Run Language="it-it" Text="1"/><LineBreak/><Run Language="it-it"/></TextBlock>
+        <Misc:DashedLine HorizontalAlignment="Left" Margin="277,424,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="4" Width="766">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <TextBlock HorizontalAlignment="Left" Margin="668,39,0,0" TextWrapping="Wrap" 
+            VerticalAlignment="Top" Height="50" Width="94" TextAlignment="Center" 
+            FontSize="36" Foreground="Black" FontWeight="Bold"><Run Text="Q"/><Run Language="it-it" Text="9"/><Run Text="1"/><LineBreak/><Run/></TextBlock>
+        <Machines:EC_Filtro Margin="928,267,304,0" VerticalAlignment="Top" Height="229"/>
+        <Machines:VT_BlowerCentrifuge_up HorizontalAlignment="Left" Margin="1052,217,0,0" VerticalAlignment="Top" Height="40" Width="64"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="983,584,0,0" VerticalAlignment="Top" Height="48" Width="48"/>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="973,514,0,0" VerticalAlignment="Top" Height="64" Width="68"/>
+        <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="98,125,987,122"/>
+        <Rectangle x:Name="BorderFiltration" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="752,125,128,122"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" Margin="453,479,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="371-ACS"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" Margin="453,565,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="359-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="207,217,0,0" 
+            Margin="983,167,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="970-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="135,217,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="357-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="207,277,0,0" 
+		Margin="135,277,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="358-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="371,153,0,0" 
+		Margin="299,153,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="371-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="207,371,0,0" 
+		Margin="135,371,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="371-41-WT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="207,446,0,0" 
+		Margin="135,446,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="207,575,0,0" 
+		Margin="135,575,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="359-21-CV1"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" Margin="525,479,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="371-ACS"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" Margin="525,565,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="359-21-CV1"/>
-        <TextBlock HorizontalAlignment="Left" Margin="196,647,0,142" TextWrapping="Wrap" TextAlignment="Center" 
-		FontSize="36" Foreground="Black" FontWeight="Bold"><Run Language="it-it" Text="Chemicals"/></TextBlock>
-        <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="170,125,915,122"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1121,309,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="970-03-EC1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1047,522,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="970-02-MA1"/>
+        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="837,258,0,0" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="752,281,0,0" TextWrapping="Wrap" 
+            VerticalAlignment="Top" Height="66" Width="122" TextAlignment="Center" 
+            FontSize="20" Foreground="White" Text="MACHINES EXHAUST"/>
+        <Rectangle HorizontalAlignment="Left" Height="22" Margin="1148,210,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
     </Grid>
 </UserControl>
