--- a/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
@@ -16,7 +16,7 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="802,279,0,0" VerticalAlignment="Top" Width="158" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="802,279,0,0" VerticalAlignment="Top" Width="158" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -26,7 +26,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="694,205,0,0" VerticalAlignment="Top" Width="191" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="694,205,0,0" VerticalAlignment="Top" Width="191" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -36,7 +36,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="411,273,0,0" VerticalAlignment="Top" Width="112" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="411,273,0,0" VerticalAlignment="Top" Width="112" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -46,7 +46,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="376,221,0,0" VerticalAlignment="Top" Width="95" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="376,221,0,0" VerticalAlignment="Top" Width="95" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -58,7 +58,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1047,575,0,0" VerticalAlignment="Top" Width="118" StatusComponent="534-01-MA1" PipeHeight="Medium" Height="14"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="421,564,0,0" VerticalAlignment="Top" Width="439" StatusComponent="534-01-MA1" Color="Air"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="800,466,0,0" VerticalAlignment="Top" Width="160" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="800,466,0,0" VerticalAlignment="Top" Width="160" StatusComponent="528-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -68,7 +68,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="903,563,0,0" VerticalAlignment="Top" Width="111" StatusComponent="524-01-MA1" PipeHeight="Medium" VisibilitySignal="530-21-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="903,563,0,0" VerticalAlignment="Top" Width="111" StatusComponent="534-01-MA1" PipeHeight="Medium" VisibilitySignal=""/>
         <Rectangle HorizontalAlignment="Left" Height="199" Margin="382,471,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="426" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Margin="745,534,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="738,558,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
@@ -86,6 +86,28 @@
                 </TransformGroup>
             </Machines:DV_Diverter_T.RenderTransform>
         </Machines:DV_Diverter_T>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="843,346,0,0" VerticalAlignment="Top" Height="72" Width="76"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="447,327,0,0" VerticalAlignment="Top"/>
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="578,194,0,0" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5">
+            <Machines:DCE_DryingCentrifuge.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:DCE_DryingCentrifuge.RenderTransform>
+        </Machines:DCE_DryingCentrifuge>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            Margin="313,190,0,0" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="524-01-MA1" 
+            JumpToLabel="455-01-MA1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            Margin="1136,546,0,0" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="534-01-MA1" 
+            JumpToLabel="810-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="993,591,0,0" 
             VerticalAlignment="Top" 
@@ -106,28 +128,6 @@
             Margin="604,602,0,0" 
             VerticalAlignment="Top" 
             ComponentName="530-11-R1"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="313,190,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="524-01-MA1" 
-            JumpToLabel="455-01-MA1"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1136,546,0,0" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="534-01-MA1" 
-            JumpToLabel="810-01-MA1"/>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="843,346,0,0" VerticalAlignment="Top" Height="72" Width="76"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="447,327,0,0" VerticalAlignment="Top"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="578,194,0,0" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="348,312,0,0" 
             VerticalAlignment="Top" 
@@ -136,5 +136,9 @@
             Margin="582,137,0,0" 
             VerticalAlignment="Top" 
             ComponentName="526-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="922,359,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="528-01-MA1"/>
     </Grid>
 </UserControl>
