--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -12,6 +12,44 @@
              mc:Ignorable="d" 
              d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-            
+        <Rectangle Height="600" Stroke="Black" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Margin="115,120,115,120"/>
+
+        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,260,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,510,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="150,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="523,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="684,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="838,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="992,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Labels:DeviceLabel x:Name="Q41" HorizontalAlignment="Left" Margin="535,215,0,0" VerticalAlignment="Top" ComponentName="Q41"/>
+        <Labels:DeviceLabel x:Name="Q51" HorizontalAlignment="Left" Margin="696,215,0,0" VerticalAlignment="Top" ComponentName="Q51"/>
+        <Labels:DeviceLabel x:Name="Q61" HorizontalAlignment="Left" Margin="850,215,0,0" VerticalAlignment="Top" ComponentName="Q61"/>
+        <Labels:DeviceLabel x:Name="Q71" HorizontalAlignment="Left" Margin="1004,215,0,0" VerticalAlignment="Top" ComponentName="Q91"/>
+        <Labels:DeviceLabel x:Name="Q01" HorizontalAlignment="Left" Margin="162,200,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
+        <Labels:DeviceLabel x:Name="ESTOP" HorizontalAlignment="Left" Margin="115,53,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
+        <Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1427,185,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
+        <Labels:DeviceLabel x:Name="HMI_02" HorizontalAlignment="Left" Margin="1427,435,0,0" VerticalAlignment="Top" ComponentName="HMI-02"/>
+        <Labels:DeviceLabel x:Name="S410" HorizontalAlignment="Left" Margin="535,431,0,0" VerticalAlignment="Top" ComponentName="S410"/>
+        <Labels:DeviceLabel x:Name="S510" HorizontalAlignment="Left" Margin="696,431,0,0" VerticalAlignment="Top" ComponentName="S510"/>
+        <Labels:DeviceLabel x:Name="S610" HorizontalAlignment="Left" Margin="850,431,0,0" VerticalAlignment="Top" ComponentName="S610"/>
+        <Labels:DeviceLabel x:Name="S710" HorizontalAlignment="Left" Margin="1004,431,0,0" VerticalAlignment="Top" ComponentName="S910"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="981,510,0,0" VerticalAlignment="Top" GroupName="810"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="320"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1051,510,0,0" VerticalAlignment="Top" GroupName="970"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="827,510,0,0" VerticalAlignment="Top" GroupName="430"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="897,510,0,0" VerticalAlignment="Top" GroupName="530"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="330"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,574,0,0" VerticalAlignment="Top" GroupName="371"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,574,0,0" VerticalAlignment="Top" GroupName="350"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="373,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Labels:DeviceLabel x:Name="Q41_Copy" HorizontalAlignment="Left" Margin="385,215,0,0" VerticalAlignment="Top" ComponentName="Q11"/>
+        <Labels:DeviceLabel x:Name="S410_Copy" HorizontalAlignment="Left" Margin="385,431,0,0" VerticalAlignment="Top" ComponentName="S110"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="397,510,0,0" VerticalAlignment="Top" GroupName="020"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="510,510,0,0" VerticalAlignment="Top" GroupName="210"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="580,510,0,0" VerticalAlignment="Top" GroupName="230"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="580,574,0,0" VerticalAlignment="Top" GroupName="290"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="510,574,0,0" VerticalAlignment="Top" GroupName="288"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="981,574,0,0" VerticalAlignment="Top" GroupName="997"/>
+
     </Grid>
 </UserControl>
