V3168 Sirplaste + V3510 Greentech update

--- a/Prevu.Synoptics.V3168_Sirplaste/P288.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P288.xaml
@@ -434,6 +434,6 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1216,639,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="293-71-ECS2" Loaded="DeviceLabel_Loaded"/>
+            ComponentName="293-71-ECS2"/>
     </Grid>
 </UserControl>
