--- a/Prevu.Synoptics.V3168_Sirplaste/P371.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P371.xaml
@@ -10,8 +10,8 @@
              x:Class="Prevu.Synoptics.P371" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="880,303,0,0" VerticalAlignment="Top" Width="72" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="970,274,0,0" VerticalAlignment="Top" Width="76" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="880,303,0,0" VerticalAlignment="Top" Width="72" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="970,274,0,0" VerticalAlignment="Top" Width="76" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -21,7 +21,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1097,219,0,0" VerticalAlignment="Top" Width="53" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1097,219,0,0" VerticalAlignment="Top" Width="53" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="257,594,0,0" VerticalAlignment="Top" Width="206" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="12"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="297,512,0,0" VerticalAlignment="Top" Width="166" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="273,315,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" >
@@ -66,8 +66,8 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="251,235,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="357-21-CV1" Height="12"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="240,297,0,0" VerticalAlignment="Top" Width="61" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="358-21-CV1" Height="10"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1006,237,0,0" VerticalAlignment="Top" Width="62" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="977,498,0,0" VerticalAlignment="Top" Width="60" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-03-EC1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1006,237,0,0" VerticalAlignment="Top" Width="62" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="977,498,0,0" VerticalAlignment="Top" Width="60" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-03-EC1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -77,7 +77,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="981,578,0,0" VerticalAlignment="Top" Width="52" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="970-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="981,578,0,0" VerticalAlignment="Top" Width="52" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
