--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -10,8 +10,8 @@
 
 	<ScrollViewer>
 		<StackPanel>
-
-		</StackPanel>
+            <Synoptics:PlantView/>
+        </StackPanel>
 	</ScrollViewer>
 
 </Window>
