--- a/Prevu.Synoptics.V3510_Greentech_Romania/D810.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/D810.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.D376"
+﻿<UserControl x:Class="Prevu.Synoptics.D810"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,13 +8,12 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid Height="386" MinWidth="380">
-        <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Center" VerticalAlignment="Center" Height="450" Width="380"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="64,119,0,0" VerticalAlignment="Top" ComponentName="376-61-LEV" SignalName="LSH" />
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="81,183,0,0" VerticalAlignment="Top" ComponentName="376-61-LEV" SignalName="LSL"/>
+    <Grid Height="450" MinWidth="380" Width="318">
+        <Machines:Storage_silo Margin="29,0,29,0"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="238,48,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="133,46,0,0" 
+		Margin="62,39,0,0" 
 		VerticalAlignment="Top" 
-		ComponentName="376-61-LEV"/>
+		ComponentName="810-61-LEV"/>
     </Grid>
 </UserControl>
